syntax = "proto3";
package pb;

option go_package = ".;pb";

message Invoice {
  string AgreementID = 1;
  string AgreementTotal = 2;
  string TransactorFee = 3;
  string Hashlock = 4;
  string Provider = 5;
	int64 ChainID = 6;   
}

message ExchangeMessage {
  Promise Promise = 1;
  string AgreementID = 2;
  string AgreementTotal = 3;
  string Provider = 4;
  string Signature = 5;
  string HermesID = 6;
  int64 ChainID = 7;   
}

message Promise {
  bytes ChannelID = 1;
  string Amount = 2;
  string Fee = 3;
  bytes Hashlock = 4;
  bytes R = 5;
	int64 ChainID = 6;   
  bytes Signature = 7;
}

